bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:4: error: too many arguments for method apply: (index: Int)Char in class StringOps
	var coupe = str(0,1,2)
                       ^