bat.string1.lessons.bat.string1.FrontTimes.scala.code
def frontTimes(str:String, n:Int):String = 
{
	var chaine = ""
	var coupe = str(0,1,2)
	
	for(i <- 1 to n)
	{
		chaine = chaine + coupe
	}

	return chaine
}
